<resources>
    <string name="app_name">黔宝商城商家端</string>
    <string name="lijiwanshan">立即完善</string>
    <string name="stor_shenqing_top">您需要完成以下几步操作：</string>
    <string name="stor_shenqing_title">店铺申请</string>
    <string name="stor_shenqing_buttom">开始填写</string>
    <string name="top_back">退出</string>
    <string name="stor_shenqing_top1">店铺信息</string>
    <string name="stor_shenqing_top2">资质信息</string>
    <string name="stor_shenqing_top3">收款信息</string>
    <string name="stor_shenqing_top4">商品信息</string>
    <string name="stor_shenqing_top6">您需要一下几项材料：</string>
    <string name="activity_stor_info_title">店铺信息</string>
    <string name="activity_stor_info_buttom">下一步</string>
    <string name="activity_stor_info_ok">提交</string>
    <string name="fragment_stor_info_one_et1">店铺名称填写</string>
    <string name="fragment_stor_info_one_et2">店铺负责人</string>
    <string name="fragment_stor_info_one_et3">店铺联系电话</string>
    <string name="fragment_stor_info_one_et4">店铺区域</string>
    <string name="fragment_stor_info_one_et5">店铺地址</string>
    <string name="fragment_stor_info_one_et6">店铺经营类别</string>
    <string name="fragment_stor_info_one_et7">店铺介绍</string>
    <string name="fragment_stor_info_one_et8">店铺外景图片（点击图片可重新上传）</string>
    <string name="fragment_stor_info_one_et9">店铺室内图片（点击图片可重新上传）</string>
    <string name="fragment_stor_info_one_et10">店铺logo图片（点击图片可重新上传）</string>
    <string name="fragment_stor_info_tow_et0">身份证信息</string>
    <string name="fragment_stor_info_tow_et1">姓名</string>
    <string name="fragment_stor_info_tow_et2">请输入姓名</string>
    <string name="fragment_stor_info_tow_et3">身份证号码</string>
    <string name="fragment_stor_info_tow_et4">请输入身份证号码</string>
    <string name="fragment_stor_info_tow_et5">手持身份证图片（点击图片可重新上传）</string>
    <string name="fragment_stor_info_tow_et6">营业执照</string>
    <string name="fragment_stor_info_tow_et7">店铺执照名称</string>
    <string name="fragment_stor_info_tow_et8">输入执照名称</string>
    <string name="fragment_stor_info_tow_et9">店铺执照注册号码</string>
    <string name="fragment_stor_info_tow_et10">请输入执照注册号</string>
    <string name="fragment_stor_info_tow_et11">店铺执照所在地</string>
    <string name="fragment_stor_info_tow_et12">请输入执照所在地</string>
    <string name="fragment_stor_info_tow_et13">店铺执照有效期</string>
    <string name="fragment_stor_info_tow_et14">店铺营业执照图片（点击图片可重新上传）</string>
    <string name="fragment_stor_info_tow_et15">许可证</string>
    <string name="fragment_stor_info_tow_et16">许可证名称</string>
    <string name="fragment_stor_info_tow_et17">请输入许可证名称</string>
    <string name="fragment_stor_info_tow_et18">许可证注册号</string>
    <string name="fragment_stor_info_tow_et19">请输入许可证注册号</string>
    <string name="fragment_stor_info_tow_et20">许可证所在地</string>
    <string name="fragment_stor_info_tow_et21">请输入许可证所在地址</string>
    <string name="fragment_stor_info_tow_et22">许可证图片（点击图片可重新上传）</string>
    <string name="fragment_stor_info_three_et0">银行卡信息</string>
    <string name="fragment_stor_info_three_et1">开户名</string>
    <string name="fragment_stor_info_three_et2">请输入银行卡开户名</string>
    <string name="fragment_stor_info_three_et3">银行卡号</string>
    <string name="fragment_stor_info_three_et4">请输入银行卡号</string>
    <string name="fragment_stor_info_three_et5">开户银行名称</string>
    <string name="fragment_stor_info_four_et0">商品价格</string>
    <string name="fragment_stor_info_four_et1">输入商品价格</string>
    <string name="fragment_stor_info_four_et2">人均消费</string>
    <string name="fragment_stor_info_four_et3">输入人均消费</string>
    <string name="fragment_stor_info_four_et4">商品图片（举例，点击图片可重新上传）</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_success">刷新成功</string>
    <string name="xlistview_header_hint_failt">刷新失败</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="shenqingjilu">申请记录</string>
    <string name="zhuce">注册</string>
    <string name="dengluchenggong">登陆成功</string>
    <string name="wangjimima">忘记密码</string>
    <string name="huoqushibai">获取失败检查网络</string>
    <string name="beiquxiao">被取消</string>
    <string name="woyaofabu">我要发布</string>
    <string name="dingdanguanli">订单管理</string>
    <string name="wodexiaoxi">我的消息</string>
    <string name="grrenzhongxin">个人中心</string>
    <string name="xiaofeiyanzheng">消费验证</string>
    <string name="shangpinguanli">商品管理</string>
    <string name="fabushangpin">发布商品</string>
    <string name="fabupaotui">发布跑腿</string>
    <string name="ok">确定</string>
    <string name="over">取消</string>
    <string name="qingshurushangpinmingchen">请输入商品名称</string>
    <string name="qingshurushangpinjiage">请输入商品价格</string>
    <string name="qingshurushangpinshuliang">请输入商品数量</string>
    <string name="qingshurudaijinjuan">请输入代金卷信息</string>
    <string name="shangpinjianjie">商品简介（备注信息）填写</string>
    <string name="shangchuanshangpintupian">上传商品图片</string>
    <string name="fabu">发布</string>
    <string name="shurushouhuoren">请输入收货人姓名</string>
    <string name="shurushouhuorenphone">请输入收货人联系电话</string>
    <string name="shurushouhuorenadress">请输入收货人详细地址</string>
    <string name="shurushouhuorenbeizhu">请输入备注（加急，用户备注留言）</string>
    <string name="shurushoppingmingchen">请输入商品名称</string>
    <string name="shurushoppingprice">请输入商品价格</string>
    <string name="shurushoppingnumber">请输入商品数量</string>
    <string name="youhuijudingdan">优惠券订单</string>
    <string name="waimaidingdan">外卖订单</string>
    <string name="bianji">编辑</string>
    <string name="jiedan">接单</string>
    <string name="xiajia">下架</string>
    <string name="shuruxiaofeiyanzhengma">输入消费验证码进行搜索</string>
    <string name="yanzheng">验证</string>
    <string name="gerenzhuyebianji">个人主页编辑</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="guanyuiwomen">关于我们</string>
    <string name="tuichu">退出登陆</string>
    <string name="storname">店铺名称</string>
    <string name="tianxiedizhi">填写地址</string>
    <string name="lianxirenxingming">联系人姓名</string>
    <string name="wodeyue">我的余额</string>
    <string name="tixian">提现</string>
    <string name="bank">银行卡</string>
    <string name="addbank">添加新银行卡</string>
    <string name="tixianmingxi">提现明细</string>
    <string name="jinetongji">金额统计</string>
    <string name="xitongtongzhi">系统通知</string>
    <string name="fragment_stor_info_one_et4_info">店铺详细地址</string>
    <string name="xuanzedizhi">请选择类型</string>
    <string name="paizhao">拍照</string>
    <string name="xiangcexuanze">相册选择</string>
    <string name="xuanzefangshi">请选择照片方式</string>
    <string name="tukushibai">亲 您的图库返回的有错误呢</string>
    <string name="xuanzezhaopian">选择照片失败</string>
    <string name="qingxuanzedianpuleixing">请选择店铺类型</string>
    <string name="qingxuanzedianpuquyu">请选择店铺区域</string>
    <string name="qingxuanzedianpuwaijing">请选择店铺外景图片</string>
    <string name="qingxuanzedianpuneijing">请选择店铺内景图片</string>
    <string name="qingxuanzedianpulog">请选择店铺logo图案</string>
    <string name="qingtianxiexingming">请填写店铺名称</string>
    <string name="qingtianuse">请填写店铺负责人</string>
    <string name="qingtiaphone">请填写联系人电话</string>
    <string name="qingtianxiexiangxidizhi">请填写店铺详细地址</string>
    <string name="qingtianxiejianji">请填写店铺简介</string>
    <string name="qingxuanzeyouxiaoqi">请选择执照有效期限</string>
    <string name="qingxxuanzeshenfenzheng">请上传身份证照片</string>
    <string name="qingxxuanzhizhao">请上传营业执照图片</string>
    <string name="qingxxuanxuke">请上传许可证图片</string>
    <string name="qingshurushenfenmingcheng">请输入身份名称</string>
    <string name="qingshurushenfenzhenghaoma">请输入身份证号码</string>
    <string name="qingshuruzhizhaomingcheng">请输入执照名称</string>
    <string name="qingshuruzhizhaohaoma">请输入执照号码</string>
    <string name="qingshuruzhizhaoadres">请输入执照地址</string>
    <string name="qingshuruzhizhaoxukename">请输入许可证号码</string>
    <string name="qingshuruzhizhaoxukehaoma">请输入许可证号码</string>
    <string name="qingshuruzhizhaoxukeadress">请输入许可证详细地址</string>
    <string name="fragment_stor_info_tow_et55">许可证有效期</string>
    <string name="qingshuruxukezhengyouxiaoqi">请输入许可证有效期</string>
    <string name="qingshuruyinhangka">请输入正确的银行卡号</string>
    <string name="qingsshuruuser">请输入姓名</string>
    <string name="qingshururenjunjiage">请输入人均价格</string>
    <string name="qingshangchuantuxiang">请上传图像</string>
    <string name="shenhezhong">审核中</string>
    <string name="tongguoshenhe">通过审核</string>
    <string name="weitongguo">未通过</string>
    <string name="jinru">进入店铺</string>
    <string name="xiugaixinxi">修改信息</string>
    <string name="shangchuantupianshibai">上传图片失败</string>
    <string name="lianxirendianhua">联系人电话</string>
    <string name="qinbaocuoinfoma">亲，保存您这次修改的信息吗？</string>
    <string name="qinhuoquxinxishibaiqingshuaxinjiemian">亲，连接服务器失败请检查网络后，刷新界面</string>
    <string name="sousuo">搜索</string>
    <string name="ninmeizuorenhexiugi">您没做任何修改内容的操作</string>
    <string name="ktvjiudian">发布KTV</string>
    <string name="fabuwaimai">发布商品</string>
    <string name="shangpinbiaoti">商品标题</string>
    <string name="shangpinxiangqing">商品详情</string>
    <string name="shangpinfenlei">商品分类</string>
    <string name="shangpinbiaoqian">商品标签</string>
    <string name="bendianshoujia">本店售价</string>
    <string name="shichangjia">市场价格</string>
    <string name="chengbenjiage">成本价格</string>
    <string name="youjinjjiage">佣金价格</string>
    <string name="kucunliang">库存数量</string>
    <string name="shangpinxianpin">商品相片</string>
    <string name="iscuxiao">添加团购</string>
    <string name="huodongleixding">活动类型</string>
    <string name="lijianjine">立减金额</string>
    <string name="kaishishijian">开始时间</string>
    <string name="jieshushijian">结束时间</string>
    <string name="huodongbiaoti">团购标题</string>
    <string name="shenqingjingyingleixing">申请经营类型</string>
    <string name="qingxuanzwleixng">请选择类型</string>
    <string name="shangpinguige">商品规格</string>
    <string name="fangxingxuzna">房型选择</string>
    <string name="timexuanze">时间选择</string>
    <string name="rixuanze">日期选择</string>
    <string name="addleixing">添加房型</string>
    <string name="addtime">添加时间段</string>
    <string name="dialog_fabutitle">申请经营类型/发布商品/活动</string>
    <string name="addfangxing">添加房型</string>
    <string name="bendianfenlei">本店分类</string>
    <string name="dianjixuanzekaishishijian">点击选择开始时间</string>
    <string name="xuanzejieshushijian">点击选择结束时间</string>
    <string name="addriqi">添加日期</string>
    <string name="zhouyi">周一</string>
    <string name="zhouer">周二</string>
    <string name="zhousan">周三</string>
    <string name="zhousi">周四</string>
    <string name="zhouwu">周五</string>
    <string name="zhouliu">周六</string>
    <string name="zhouri">周日</string>
    <string name="quanxuan">全选</string>
    <string name="deletefangzxing">删除选中</string>
    <string name="huodongshangpin">活动商品</string>
    <string name="tuangoujiage">团购价格</string>
    <string name="cantuanshuliang">参团数量</string>
    <string name="fabutuangou">发布团购</string>
    <string name="fabucuxiao">发布促销</string>
    <string name="canjiacuxiao">参加促销</string>
    <string name="huodongleixing">活动类型</string>
    <string name="shurujiage">输入价格</string>
    <string name="shurukucun">输入库存</string>
    <string name="qingshuru">请输入</string>
    <string name="dialogdingdan">我的订单</string>
    <string name="youhuiquan">优惠券订单</string>
    <string name="boda">拨打</string>
    <string name="cuxiaobiaoti">促销标题</string>
    <string name="lijianjiage">立减金额</string>
    <string name="xuanzeshangpin">选择商品</string>
    <string name="chakanpingjia">查看评价</string>
</resources>