<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_text_12"
            android:padding="@dimen/pading_10"
            android:gravity="center_vertical"
            android:textColor="@color/text_color_alp"
            android:text="@string/fragment_stor_info_tow_et0"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pading_10"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_stor_info_tow_et1"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                />
            <EditText
                android:id="@+id/fragment_stor_shenqing_tow_etname"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_color_alp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:gravity="right"
                android:hint="@string/fragment_stor_info_tow_et2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pading_10"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/pading_1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_stor_info_tow_et3"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                />
            <EditText
                android:id="@+id/fragment_stor_info_tow_etshenfenzheng"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_color_alp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="right"
                android:hint="@string/fragment_stor_info_tow_et4"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_text_12"
            android:padding="@dimen/pading_10"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:text="@string/fragment_stor_info_tow_et5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/pading_1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pading_10"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/fragment_stor_info_tow_ivstor_shenfen"
                android:layout_width="@dimen/pading_100"
                android:layout_height="@dimen/pading_100"
                android:src="@mipmap/tianjia"
                android:scaleType="fitCenter"
                android:background="@color/background"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_text_12"
            android:padding="@dimen/pading_10"
            android:gravity="center_vertical"
            android:textColor="@color/text_color_alp"
            android:text="@string/fragment_stor_info_tow_et6"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pading_10"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_stor_info_tow_et7"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                />
            <EditText
                android:id="@+id/fragment_stor_info_tow_etzhizhao"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_color_alp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"
                android:gravity="right"
                android:hint="@string/fragment_stor_info_tow_et8"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pading_10"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/pading_1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_stor_info_tow_et9"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                />
            <EditText
                android:id="@+id/fragment_stor_info_tow_etzhihaoma"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_color_alp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="right"
                android:hint="@string/fragment_stor_info_tow_et10"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pading_10"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/pading_1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_stor_info_tow_et11"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                />
            <EditText
                android:id="@+id/fragment_stor_info_tow_etzhiadress"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_color_alp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:gravity="right"
                android:hint="@string/fragment_stor_info_tow_et12"/>
        </LinearLayout>
        <TextView
            android:id="@+id/fragment_stor_info_one_tvstor_leibie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_text_12"
            android:padding="@dimen/pading_10"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:text="@string/fragment_stor_info_tow_et13"
            android:background="@color/white"
            android:layout_marginTop="@dimen/pading_1"
            android:drawableRight="@mipmap/jinru"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_text_12"
            android:padding="@dimen/pading_10"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:text="@string/fragment_stor_info_tow_et14"
            android:background="@color/white"
            android:layout_marginTop="@dimen/pading_1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pading_10"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/fragment_stor_info_tow_ivstor_zhizhao"
                android:layout_width="@dimen/pading_100"
                android:layout_height="@dimen/pading_100"
                android:src="@mipmap/tianjia"
                android:scaleType="fitCenter"
                android:background="@color/background"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_text_12"
            android:padding="@dimen/pading_10"
            android:gravity="center_vertical"
            android:textColor="@color/text_color_alp"
            android:text="@string/fragment_stor_info_tow_et15"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pading_10"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_stor_info_tow_et16"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                />
            <EditText
                android:id="@+id/fragment_stor_info_tow_etxukezheng"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_color_alp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:gravity="right"
                android:hint="@string/fragment_stor_info_tow_et17"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pading_10"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/pading_1"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_stor_info_tow_et18"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                />
            <EditText
                android:id="@+id/fragment_stor_info_tow_etxukenumber"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_color_alp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="right"
                android:hint="@string/fragment_stor_info_tow_et19"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pading_10"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/pading_1"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_stor_info_tow_et20"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                />
            <EditText
                android:id="@+id/fragment_stor_info_tow_etxukeadress"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_color_alp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_text_12"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:gravity="right"
                android:hint="@string/fragment_stor_info_tow_et21"/>

        </LinearLayout>
        <TextView
            android:id="@+id/fragment_stor_info_one_tvxuketime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_text_12"
            android:padding="@dimen/pading_10"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:text="@string/fragment_stor_info_tow_et55"
            android:background="@color/white"
            android:layout_marginTop="@dimen/pading_1"
            android:drawableRight="@mipmap/jinru"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_text_12"
            android:padding="@dimen/pading_10"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:text="@string/fragment_stor_info_tow_et22"
            android:background="@color/white"
            android:layout_marginTop="@dimen/pading_1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pading_10"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/fragment_stor_info_tow_ivstor_xukezheng"
                android:layout_width="@dimen/pading_100"
                android:layout_height="@dimen/pading_100"
                android:src="@mipmap/tianjia"
                android:scaleType="fitCenter"
                android:background="@color/background"
                />
        </LinearLayout>















        <TextView
            android:id="@+id/fragment_stor_info_tow_tvbuttom_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_color"
            android:gravity="center"
            android:padding="@dimen/pading_10"
            android:text="@string/activity_stor_info_buttom"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_14" />
    </LinearLayout>

</ScrollView>